# mfcc_cpp

./: CMakeLists.txt  README.md  main.cpp
libmfcc/: CMakeLists.txt  mfcc.cpp  mfcc.h  mfcc_block.cpp  mfcc_block.h
